# Puerto-Rico-Bot

./: .gitignore  CMakeLists.txt  README.md  builder.cpp  builder.h  captain.h  game.h  integrity_checker.cpp  integrity_checker.h  main.cpp  mayor.cpp  mayor.h  player.h  random_strategy.h  role.h  settler.cpp  strategy.h
include/: action.h  basic_heuristic.h  building.h  console_strategy.h  craftsman.h  game.h  good.h  integrity_checker.h  maxn_strategy.h  monte_carlo_strategy.h  prospector.h  random_strategy.h  roles.h  settler.h  simple_heuristic_strategy.h  state_evaluator.h  strategy.h  trader.h
src/: basic_heuristic.cpp  builder.cpp  captain.cpp  console_strategy.cpp  craftsman.cpp  game.cpp  integrity_checker.cpp  main.cpp  mayor.cpp  prospector.cpp  settler.cpp  trader.cpp
